--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,16 @@
                 </a>
             </li>
             <li>
+                <a href="https://bsky.app/profile/rossf7.bsky.social" title="Bluesky">
+                    <span>Bluesky</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://mastodon.green/@rossf7" title="Mastodon">
+                    <span>Mastodon</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://twitter.com/rossf7" title="Twitter">
                     <span>Twitter</span>
                 </a>
